# Scan2Folder

./: README.md  Readme.md  configform.ui  dialog.ui  imagecalibrate.py  mainwindow.ui  multithread.py  ocrtools.py  pyproject.toml  resource.qrc  resources.py  resources.qrc  rubberband.py  scan2folder.py  ui_configform.py  ui_dialog.py  ui_mainwindow.py
images/: icon.xpm
src/scan2folder/: __main__.py  configform.ui  dialog.ui  imagecalibrate.py  multithread.py  ocrtools.py  pagesizes.json  resources.py  rubberband.py  scan2folder.py  ui_configform.py  ui_dialog.py
